--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -28,7 +28,7 @@ Generating clear, well-formatted parameter tables for your NONMEM® model is an 
 
 ```{r load packages, results = 'hide', message=FALSE, warning=FALSE}
 library(mrgparamtab)
-library(tidyverse)
+library(dplyr)
 library(bbr)
 ```
 
@@ -108,11 +108,8 @@ With `mrgparamtab` would run:
 
 ```{r}
 param_df <- 
-  defineParamTable(.estimates = estimates, .key = paramKey) %>% 
-  getValueSE() %>% 
-  getCI() %>% # add argument .ci = 95 or 90 to change confidence interval, default is 95% 
-  formatParamTable() %>% 
-  as.data.frame()
+  defineParamTable(.estimates = estimates, .key = paramKey, .ci = 95) %>% 
+  formatParamTable()
 
 param_df
 ```
@@ -126,98 +123,3 @@ Provided below is a quick description for each of the functions used above:
 - `get95CI()` calculates the upper and lower values of the 95% confidence intervals (CIs).
 - `formatParamTable()` formats the parameters ready for the final table. This potentially includes back transforming parameters and their CIs, rounding parameters using pmtables::sig, and combining columns. 
 
-
-# Internal meeting information
-
-## Updated parameter key format
-
-Removed the letter headers and replaced them with the name of the parameter. 
-This leaves 4 arguments for the user to specify:
-
-- `abb`: abbreviation for model parameter (we use latex coding)
-- `desc`: parameter description to appear
-- `panel`: the table panel the parameter should appear under
-- `trans`: definition of how the parameter should be transformed
-
-The new format looks as such:
-
-```{r, eval=FALSE}
-THETA1:
-  abb: "KA (1/h)"
-  desc: "First order absorption rate constant"
-  panel: struct
-  trans: logTrans
-```
-
-NOTE: While documentation will suggest users set up the parameter key as shown above,
-the package supports the prior format as well, in addition to the parameter key input as 
-a tibble.
-
-## Exported functions
-
-Current functions available to the user include:
-
-![Exported functions](../man/figures/test.png){width=75%}
-
-## defineParamTable()
-
-### Description
-
-`defineParamTable()` actions:
-
-- runs this function `removePunc(.column = "parameter_names")`
-- joins parameter estimates & parameter key (can provide path/data.frame for either)
-- runs `checkTransforms()` & `defineRows()`
-- performs check that all critical information from parameter key is provided
-
-QUESTION: Will the user ever need to independently run `checkTransforms()` or `defineRows()`?
-
-## getCI()
-
-### Description
-
-`getCI()` actions:
-
-- mutates columns to a data.frame for the upper and lower bound of a 90% or 95% confidence interval
-- user can specify which type of confidence interval, default is 95%
-
-QUESTION: Should default value be 95%?
-
-## getValueSE()
-
-### Description
-
-`getValueSE()` actions:
-
-- gets a value or estimate for each model parameter and its associated metric
-- user has optional arguments for `.digit` and `.maxex` for `pmtables::sig()` function
-- significant digits will be `pmtables::sig()` default if no arguments provided
-
-## getpRSE()
-
-### Notes
-
-- user has optional arguments for `.digit` and `.maxex` for `pmtables::sig()` function
-- significant digits will be `pmtables::sig()` default if no arguments provided
-
-QUESTION: Will the user want to call `getpRSE()` independently or inside `formatValues()`
-
-## getpCV()
-
-### Notes
-
-- called within `formatValues()`
-
-QUESTION: Will the user need to call `getpCV()` outside of `formatValues()`?
-
-## formatParamTable()
-
-### Description
-
-`formatParamTable()` actions:
-
-- runs `formatValues()`, `formatGreekNames()` & `getPanelName()`
-- selects desired columns
-- user can specify but default columns are: `c("type", "abb", "greek", "desc", "value", "ci", "shrinkage")`
-
-QUESTION: Will any of `formatValues()`, `formatGreekNames()` or `getPanelName()` need to be run independently?
