--- a/README.Rmd
+++ b/README.Rmd
@@ -5,13 +5,7 @@
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 ## Overview 
-pmparams helps define and format parameter tables.
-
-An example parameter table script highlighting `pmparams` functions to create a parameter table can be found
-[here](https://github.com/metrumresearchgroup/expo1-nonmem-foce/blob/main/script/pk-final-model-table.R).
-
-An example parameter table script highlighting `pmparams` functions to create a bootstrap parameter table can be found
-[here](https://github.com/metrumresearchgroup/expo1-nonmem-foce/blob/main/script/pk-final-model-table-boot.R).
+`pmparams` helps define and format parameter tables. Example code demonstrating the package as part of an analysis workflow will soon be available in our [MeRGE Expo 1 repository](https://github.com/metrumresearchgroup/expo1-nonmem-foce/).
 
 ## Documentation
 Public documentation of all functions is hosted at [https://metrumresearchgroup.github.io/pmparams/](https://metrumresearchgroup.github.io/pmparams/)
