--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -12,7 +12,11 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
-#writeLines("Version: 1.0", con = "temp.Rproj")
+
+options(
+  'bbr.bbi_exe_path' = bbr::read_bbi_path(),
+  'bbr.verbose' = FAKSE
+)
 ```
 
 # Introduction
@@ -34,6 +38,7 @@ library(dplyr)
 library(yaml)
 library(pmtables)
 ```
+
 
 # Data requirements
 
