--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
 
 options(
   'bbr.bbi_exe_path' = bbr::read_bbi_path(),
-  'bbr.verbose' = FAKSE
+  'bbr.verbose' = FALSE
 )
 ```
 
