--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -108,19 +108,18 @@ We leverage `make_pmtable` to generate fixed effects and random effects paramete
 ```{r}
 tableList <- list()
 
-#fixed footnotes
-footNote1 <- "Abbreviations: CI = confidence intervals; SE = standard error"
-footNote2 <- "Confidence intervals = estimate $\\pm$ 1.96 $\\cdot$ SE"
-
-#random footnotes
-footNote3 <- "Abbreviations: CI = confidence intervals; Corr = Correlation coefficient; CV = coefficient of variation; SD = standard deviation; SE = standard error"
-footNote4 <- "CV\\% of log-normal omegas = sqrt(exp(estimate) - 1) $\\cdot$ 100" 
-footNote5 <- "CV\\% of sigma = sqrt(estimate) $\\cdot$ 100"
+#grab footnotes
+footnote <- get_equations(.ci = 95)
 ```
 
 ```{r}
 ##fixed
-tableList$fixed <- make_pmtable(df2, .pmtype = "fixed", .notes = c(footNote1, footNote2))
+tableList$fixed <- make_pmtable(df2, .pmtype = "fixed") %>% 
+  #abbreviations
+  st_notes(footnote$ci, footnote$se) %>% 
+  #equations
+  st_notes_str() %>% 
+  st_notes(footnote$ciEq) 
 
 # tableList$fixed %>% 
 #   stable() %>% 
@@ -129,7 +128,12 @@ tableList$fixed <- make_pmtable(df2, .pmtype = "fixed", .notes = c(footNote1, fo
 
 ```{r}
 ##random
-tableList$random <- make_pmtable(df2, .pmtype = "random", .notes = c(footNote3, footNote4, footNote5))
+tableList$random <- make_pmtable(df2, .pmtype = "random") %>% 
+  #abbreviations
+  st_notes(footnote$ci, footnote$se) %>% 
+  #equations
+  st_notes_str() %>% 
+  st_notes(footnote$cvOmegaEq, footnote$cvSigmaEq)
 
 tableList$random %>% 
   stable() %>% 
@@ -138,7 +142,13 @@ tableList$random %>%
 
 If you want to add or overwrite pre-defined `pmtables` argument, simply pipe onto the `make_pmtable` tibble:
 ```{r,results = 'asis'}
-tableList$random <- make_pmtable(df2, .pmtype = "random", .notes = c(footNote3, footNote4, footNote5))
+tableList$random <- make_pmtable(df2, .pmtype = "random") %>% 
+  #abbreviations
+  st_notes(footnote$ci, footnote$se) %>% 
+  #equations
+  st_notes_str() %>% 
+  st_notes(footnote$ciEq) 
+
 tableList$random %>% 
   st_panel("abb") %>% 
   st_select(-"type", -"greek") %>% 
