--- a/vignettes/making-bootstrap-parameter-tables.Rmd
+++ b/vignettes/making-bootstrap-parameter-tables.Rmd
@@ -120,7 +120,7 @@ We use `pmtables` to make formatted table.
 tableList <- list()
 
 #grab footnotes
-footnote <- get_equations(.ci = 95)
+footnote <- param_notes(.ci = 95)
 ```
 
 ```{r}
