--- a/README.Rmd
+++ b/README.Rmd
@@ -15,8 +15,13 @@
 ## Overview 
 `pmparams` helps define and format parameter tables. Example code demonstrating the package as part of an analysis workflow is available in our [MeRGE Expo 1 repository](https://github.com/metrumresearchgroup/expo1-nonmem-foce/).
 
+### Featured Vignettes
+
+* [Getting Started](https://metrumresearchgroup.github.io/pmparams/articles/getting-started.html) -- Introduction to `pmparams` functions. 
+* [Making Bootstrap Tables](https://metrumresearchgroup.github.io/pmparams/articles/making-bootstrap-parameter-tables.html) -- Introduction to `pmparams` functions that create bootstrap parameter tables.
+    
 ## Documentation
-Public documentation of all functions is hosted at [https://metrumresearchgroup.github.io/pmparams/](https://metrumresearchgroup.github.io/pmparams/)
+Public documentation of all functions is hosted at [https://metrumresearchgroup.github.io/pmparams/reference/index.html](https://metrumresearchgroup.github.io/pmparams/reference/index.html)
 
 
 ## Development
