commit readme updates

--- a/README.Rmd
+++ b/README.Rmd
@@ -48,7 +48,7 @@ in RStudio). renv will activate and find the project library.
 
 ## Getting help
 
-If you encounter a clear bug, please file an issue with a minimal reproducible example on [pmparams](https://github.com/pmparams/issues). 
+If you encounter a clear bug, please file an issue with a minimal reproducible example on [pmparams](https://github.com/metrumresearchgroup/pmparams/issues). 
 
 ```{r setup, include = FALSE}
 ## Package coverage
