--- a/vignettes/making-bootstrap-parameter-tables.Rmd
+++ b/vignettes/making-bootstrap-parameter-tables.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "making-bootstrap-parameter-tables"
+title: "Making Bbootstrap Parameter Tables"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{making-bootstrap-parameter-tables}
