--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,7 @@
 
 <!-- badges: start -->
 
-[![Build Status](https://github-drone.metrumrg.com/api/badges/metrumresearchgroup/pmparams/status.svg)](https://github-drone.metrumrg.com/metrumresearchgroup/pmparams)
+[![Build Status](https://github.com/metrumresearchgroup/pmparams/actions/workflows/main.yaml/badge.svg)](https://github.com/metrumresearchgroup/pmparams/actions/workflows/main.yaml)
 <!-- badges: end -->
 
 ## Overview 
