--- a/vignettes/making-bootstrap-parameter-tables.Rmd
+++ b/vignettes/making-bootstrap-parameter-tables.Rmd
@@ -146,17 +146,16 @@ nonboot_df2 <- define_param_table(.estimates = nonboot_paramEstPath,
                 .key = paramKeyPath) %>% 
                 format_param_table()
 
-bootParam = left_join(nonboot_df2, df2, by = c("abb", "desc"))
+bootParam = left_join(nonboot_df2, df2)
 
 head(bootParam)
 
 
 footBoot = glue::glue("CI were determined from the 2.5th and 97.5th percentiles 
-                of the ({nrow(df2)}) non-parametric bootstrap estimates.")
+                of the non-parametric bootstrap estimates (n ={nrow(df2)}).")
 
 #Fixed
-tableList$fixed <- make_boot_pmtable(.boot_df = df2,
-                    .nonboot_df = nonboot_df2,
+tableList$fixed1 <- make_boot_pmtable(.boot_df = df2,
                     .pmtype = "fixed") %>% 
   st_center(desc = col_ragged(5.5),
             abb = "l") %>% 
@@ -167,24 +166,41 @@ tableList$fixed <- make_boot_pmtable(.boot_df = df2,
   st_notes_detach(width = 1) %>% 
   st_files(output = "final-param-fixed-boot.tex") 
   
-tableList$fixed %>% 
+tableList$fixed1 %>% 
+  stable() %>% 
+  st_asis()
+
+tableList$fixed2 <- make_boot_pmtable(.boot_df = bootParam,
+                    .pmtype = "fixed") %>% 
+  st_center(desc = col_ragged(5.5),
+            abb = "l") %>% 
+  st_notes(param_notes()$ci) %>%         # add abbreviations
+  st_notes_str() %>%                     # collapse all abbreviations to a string                        
+  st_notes(param_notes()$logTrans,       # customize other notes
+           footBoot) %>%   
+  st_notes_detach(width = 1) %>% 
+  st_files(output = "final-param-fixed-boot-nonboot.tex") 
+  
+tableList$fixed2 %>% 
   stable() %>% 
   st_asis()
 
   
-  ##  RANDOM EFFECTS table ----------------------------
-tableList$random <- bootParam %>% 
-  make_pmtable(.pmtype = "random") %>% 
-  st_center(abb = "l") %>% 
-  st_notes(param_notes()$ci) %>%         # add abbreviations 
-  st_notes_str() %>%                     # collapse all abbreviations to a string                  
-  st_notes(param_notes()$logTrans,       # customize other notes
-           footBoot) %>%   
-  st_notes_detach(width = 1) %>% 
-  st_files(output = "final-param-random-boot.tex") 
-
-tableList$random %>% 
-  stable() %>% 
-  st_asis()
+##  RANDOM EFFECTS table ----------------------------
+#with nonboot estimates
+#TODO: Need to update format_boot_table output
+# tableList$random <- bootParam %>%
+#   make_boot_pmtable(.pmtype = "random") %>%
+#   st_center(abb = "l") %>%
+#   st_notes(param_notes()$ci) %>%         # add abbreviations
+#   st_notes_str() %>%                     # collapse all abbreviations to a string
+#   st_notes(param_notes()$logTrans,       # customize other notes
+#            footBoot) %>%
+#   st_notes_detach(width = 1) %>%
+#   st_files(output = "final-param-random-boot.tex")
+# 
+# tableList$random %>%
+#   stable() %>%
+#   st_asis()
 ```
 
