--- a/vignettes/making-bootstrap-parameter-tables.Rmd
+++ b/vignettes/making-bootstrap-parameter-tables.Rmd
@@ -53,7 +53,8 @@ A more detailed walk-through of generating the parameter key is available here: 
 MeRGE Expo: Creating a Parameter Key </a>. 
 
 ```{r, message = FALSE}
-paramKeyPath <- system.file("model/nonmem/pk-parameter-key-new.yaml", package = "pmparams")
+MODEL_DIR <- system.file("model/nonmem", package = "pmparams")
+paramKeyPath <- file.path(MODEL_DIR, "pk-parameter-key-new.yaml")
 paramKey <- yaml::yaml.load_file(paramKeyPath)
 head(unlist(paramKey))
 ```
@@ -66,7 +67,7 @@ head(unlist(paramKey))
 
 For this example, we will use the path to the model directory.
 ```{r, message = FALSE}
-nonboot_paramEstPath <- system.file("model/nonmem/106", package = "pmparams")
+nonboot_paramEstPath <- file.path(MODEL_DIR, "106")
 ```
 
 ## Boot parameter estimates 
@@ -76,7 +77,7 @@ nonboot_paramEstPath <- system.file("model/nonmem/106", package = "pmparams")
 
 For this example, we will use the path to file.
 ```{r, message = FALSE}
-boot_paramEstPath <- system.file("model/nonmem/boot/data/boot-106.csv", package = "pmparams")
+boot_paramEstPath <- file.path(MODEL_DIR, "boot", "data", "boot-106.csv")
 ```
 
 # Define boot parameter table
